--- a/src/Cover/index.module.scss
+++ b/src/Cover/index.module.scss
@@ -1,41 +1,45 @@
+@import "../variables";
+
 .cover {
   position: relative;
   margin-bottom: 92px;
 
   width: 100%;
-  height: 100%;
 
-  background: url(../assets/cover.png);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  @media (max-width: $large-desktop - 1) {
+    width: 100vw;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
+  }
 
-  &::before {
+  img {
+    position: relative;
+    width: 100%;
+  }
+
+  a {
     position: absolute;
+
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-    transition: opacity 0.15s linear;
-    content: "";
-    background-color: #2a2c2f;
-    opacity: 0.3;
-  }
 
-  &:hover::before {
-    opacity: 0.8;
-  }
-
-  a {
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
-    padding: 245px 0;
     text-decoration: none;
     color: #fff;
     z-index: 1;
+
+    background-color: rgba(0, 0, 0, 0.3);
+    transition: background-color 0.1s linear;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.6);
+    }
   }
 
   h2 {
@@ -46,6 +50,12 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 1.1;
+
+    @media (max-width: $tablet - 1) {
+      max-width: 250px;
+      margin-bottom: 16px;
+      font-size: 32px;
+    }
   }
 
   p {
@@ -55,5 +65,9 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 1.2;
+
+    @media (max-width: $tablet - 1) {
+      font-size: 14px;
+    }
   }
 }
