--- a/src/Footer/index.module.scss
+++ b/src/Footer/index.module.scss
@@ -1,3 +1,5 @@
+@import "../variables";
+
 .footer {
   display: flex;
   justify-content: space-between;
@@ -5,12 +7,21 @@
 
   margin-bottom: 24px;
 
+  @media (max-width: $tablet - 1) {
+    flex-direction: column;
+  }
+
   ul {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 
     list-style: none;
+
+    @media (max-width: $tablet - 1) {
+      flex-direction: column;
+      margin-bottom: 32px;
+    }
   }
 
   a {
@@ -20,10 +31,21 @@
     line-height: 1;
 
     color: #fff;
+
+    @media (max-width: $tablet - 1) {
+      margin-bottom: 32px;
+
+      font-size: 24px;
+    }
   }
 
   li + li {
     margin-left: 18px;
+
+    @media (max-width: $tablet - 1) {
+      margin-left: 0;
+      margin-top: 32px;
+    }
   }
 
   .copyright {
