--- a/src/PhotoGrid/index.module.scss
+++ b/src/PhotoGrid/index.module.scss
@@ -1,9 +1,28 @@
+@import "../variables";
+
 .photoGrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 16px;
 
   margin: 0 auto 92px;
+
+  width: 100%;
+
+  @media (max-width: $large-desktop - 1) {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 14px;
+  }
+
+  @media (max-width: $desktop - 1) {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+  }
+
+  @media (max-width: $tablet - 1) {
+    grid-template-columns: 1fr;
+    gap: 12px;
+  }
 
   img {
     width: 100%;
