--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import "./_variables.scss";
 
 * {
   padding: 0;
@@ -10,6 +11,8 @@ body {
   font-family: "Inter", sans-serif;
   color: #fff;
   background-color: #2a2c2f;
+
+  min-width: $mobile;
 
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
