--- a/src/Header/index.module.scss
+++ b/src/Header/index.module.scss
@@ -1,10 +1,19 @@
+@import "../variables";
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  margin-bottom: 56px;
-  padding-top: 28px;
+  padding: 52px 0 28px;
+
+  @media (max-width: $large-desktop - 1) {
+    padding: 48px 0 28px;
+  }
+
+  @media (max-width: $tablet - 1) {
+    padding: 42px 0 16px;
+  }
 
   .langLink {
     display: flex;
